star fix, main icons wrap, buncee button fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -957,10 +957,21 @@ width:102px;
 		margin-bottom:38px;
 	}
   .workbox {
+    .moreExpla{
+      .moreouterWrap{
+        width: 100%;
+        flex-wrap: wrap;
+        min-width: 0;
+      }
+    }
    .main_work, .funwork, .fa{
     @include sizes(95%, 30vh);
      text-align:center;
-     margin-bottom:90px;
+     margin: {
+       left: auto;
+       right: auto;
+       bottom: 90px;
+     }
   .portwrap {
     @include sizes(100%, 100%, 400px);
     box-sizing: border-box;
